--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,7 @@ body {
 
 .tab {
     border-radius: 5%;
+    transition: 0.3s;
 }
 
 #profileImage {
@@ -26,8 +27,13 @@ body {
     box-shadow: 0 1px 10px 5px rgb(250, 200, 200);
 }
 
+.title.is-5 {
+    color: #dc4e76;
+}
+
 a {
     color: #dc4e76;
+    transition: 0.3s;
 }
 
 a:hover {
@@ -42,4 +48,13 @@ a:hover {
     opacity: 0;
     transition: opacity 0.3s linear;
     pointer-events: none;
+}
+
+.box {
+  transition: 0.3s;
+}
+
+.box:hover {
+  background-color: #f5f5f5;
+  cursor: pointer;
 }
