--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -52,9 +52,17 @@ a:hover {
 
 .box {
   transition: 0.3s;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .box:hover {
   background-color: #f5f5f5;
   cursor: pointer;
+}
+
+.tag {
+    width: fit-content;
 }
